fix: align main

--- a/css/card.css
+++ b/css/card.css
@@ -1,4 +1,5 @@
-body {
+body,
+.main {
   display: grid;
   place-items: center;
 }
